fixes blurry text (text-shadow applied to text) for https://www.pivotaltracker.com/story/show/10547529

--- a/media/css/mirosubs-widget.css
+++ b/media/css/mirosubs-widget.css
@@ -2967,6 +2967,7 @@ color: #999 !important;
 font-size: 11px !important;
 font-weight: normal !important;
 letter-spacing: .04em !important;
+text-shadow: 0 0 0 !important;
 }
 
 
